chore(scripts): add build:indexes and build:packageJson scripts to package.json
In order to automate some parts of the build process, I added `build:indexes` and `build:packageJson` scripts to the package.json. These scripts will build the indexes and the package.json files of each package in the monorepo respectively.

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "type": "git",
     "url": "git+https://github.com/shorwood/unshared.git"
   },
-  "packageManager": "pnpm@7.29.1",
   "scripts": {
     "build": "pnpm -F @unshared/* build",
+    "build:indexes": "pnpm -F @unshared/* build:indexes",
+    "build:packageJson": "pnpm -F @unshared/* build:packageJson",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest",
