chore(build): alias added for scripts in tsconfig
An alias "@/*" has been added for scripts in the `tsconfig.json` file. This allows importing scripts from the `scripts` directory using a simple path.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "vitest/importMeta"
     ],
     "paths": {
-      "@unshared/*": ["./packages/*"]
+      "@unshared/*": ["./packages/*"],
+      "@/*": ["./scripts/*"]
     }
   },
   "include": [
