feat(scripts): add automated commit message generation
Added a new `commit.ts` script using the OpenAI GPT-4 model and `dotenv` package for generating commit messages automatically based on the staged changes. Additionally, a 'commit' command has been added to the `package.json` scripts. A YAML file `commitPrompt.yaml` to hold message prompts used by the commit script was also introduced.

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@ docs/api
 docs/**/metadata.json
 *.log
 
-# Source as distribution.
-!packages/eslint-config/dist/
+# Dotenv
+.env
+.env.*
 
 # Vitest
 coverage/
