--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "6.7.5",
     "@typescript-eslint/parser": "6.7.5",
     "eslint-config-standard": "17.1.0",
+    "eslint-plugin-antfu": "1.0.0-beta.12",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-html": "7.1.0",
     "eslint-plugin-import": "2.28.1",
