--- a/packages/string/package.json
+++ b/packages/string/package.json
@@ -223,10 +223,10 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "pnpm build:indexes && pnpm build:bundle && pnpm build:packageJson",
+    "build:bundle": "tsx ../../scripts/build.ts",
     "build:indexes": "tsx ../../scripts/buildIndexes.ts",
-    "build:packageJson": "tsx ../../scripts/buildPackageJson.ts",
-    "dev": "tsup --watch"
+    "build:packageJson": "tsx ../../scripts/buildPackageJson.ts"
   },
   "dependencies": {
     "@unshared/collection": "workspace:*",
