chore(scripts): Consolidate build scripts and remove unused buildIndex.ts
Simplify build steps by merging them into single command in `package.json`. Build index and package json steps have been integrated into `build.ts` script. Obsolete `buildIndex.ts` script has been deleted.

--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "url": "git+https://github.com/shorwood/unshared.git"
   },
   "scripts": {
-    "build:bundle": "tsx ./scripts/build.ts",
-    "build:indexes": "tsx ./scripts/buildIndexes.ts",
-    "build:packageJson": "tsx ./scripts/buildPackageJson.ts",
+    "build": "tsx ./scripts/build.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "vitest",
