chore(testing): update test scripts and vitest configuration
Updated the test script in `package.json` to add a run flag to the `vitest` command. Simplified the `vitest.config.ts` file, removing the modules array and changing the paths to relative links.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "tsx ./scripts/build.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "vitest",
+    "test": "vitest --run",
     "test:ui": "vitest --ui",
     "test:watch": "vitest --watch",
     "test:types": "vitest typecheck",
