chore(scripts): consolidate utility functions and add `getPackageMetadata`
This commit consolidates the utility scripts `getGitHash.ts` and `getGitRemoteUrl.ts` into a single `utils.ts` file. These functions are now exported from `utils.ts`, reducing redundancy and streamlining the codebase.

Additionally, a new function `getPackageMetadata` has been added to `utils.ts`. This function retrieves the package metadata for a given package name, enhancing our ability to handle package-related tasks. This changes includes the addition of the `types-pkg-json` and `types-tsconfig` packages.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "rollup-plugin-dts": "6.1.0",
     "rollup-plugin-esbuild": "6.1.0",
     "tsx": "3.12.10",
+    "types-pkg-json": "1.2.1",
+    "types-tsconfig": "2.0.2",
     "typescript": "5.2.2",
     "vitest": "0.34.5"
   },
