chore(boolean): restructure package exports and update version
Revised the `package.json` structure for the `@unshared/boolean` package to use subpath patterns for the exports field, improving the modularity and import paths. Updated the version from `0.0.1` to `0.0.0` to reflect the pre-release status. Removed unnecessary top-level entries such as `main`, `module`, `types`, and `browser` in favor of the more specific subpath exports. Also, updated the `LICENSE` file reference to include the correct file extension `.md`. This change makes the package's public API cleaner and more explicit about the entry points, facilitating better tree-shaking and optimizations when used in consumer projects.

--- a/packages/boolean/package.json
+++ b/packages/boolean/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@unshared/boolean",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "license": "MIT",
   "sideEffects": false,
   "description": "Boolean logic functions",
@@ -13,67 +13,62 @@
     "url": "git@github.com:shorwood/unshared.git",
     "directory": "packages/boolean"
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "browser": "./dist/index.iife.js",
   "exports": {
-    "Boolean": {
+    "./Boolean": {
       "require": "./dist/Boolean.cjs",
       "types": "./dist/Boolean.d.ts",
       "import": "./dist/Boolean.js"
     },
-    "and": {
+    "./and": {
       "require": "./dist/and.cjs",
       "types": "./dist/and.d.ts",
       "import": "./dist/and.js"
     },
-    "createBoolean": {
+    "./createBoolean": {
       "require": "./dist/createBoolean.cjs",
       "types": "./dist/createBoolean.d.ts",
       "import": "./dist/createBoolean.js"
     },
-    "nand": {
+    "./nand": {
       "require": "./dist/nand.cjs",
       "types": "./dist/nand.d.ts",
       "import": "./dist/nand.js"
     },
-    "nor": {
+    "./nor": {
       "require": "./dist/nor.cjs",
       "types": "./dist/nor.d.ts",
       "import": "./dist/nor.js"
     },
-    "not": {
+    "./not": {
       "require": "./dist/not.cjs",
       "types": "./dist/not.d.ts",
       "import": "./dist/not.js"
     },
-    "or": {
+    "./or": {
       "require": "./dist/or.cjs",
       "types": "./dist/or.d.ts",
       "import": "./dist/or.js"
     },
-    "xnor": {
+    "./xnor": {
       "require": "./dist/xnor.cjs",
       "types": "./dist/xnor.d.ts",
       "import": "./dist/xnor.js"
     },
-    "xor": {
+    "./xor": {
       "require": "./dist/xor.cjs",
       "types": "./dist/xor.d.ts",
       "import": "./dist/xor.js"
     },
-    "*": {
+    ".": {
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts",
-      "browser": "./dist/index.iife.js",
       "import": "./dist/index.js"
     }
   },
   "files": [
     "dist",
     "README.md",
-    "LICENSE"
+    "LICENSE.md"
   ],
   "dependencies": {
     "@unshared/types": "workspace:*"
