--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,21 +4,22 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Node",
-    "strict": true,
+    "paths": {
+      "@/*": ["./scripts/*"],
+      "@unshared/*": ["./packages/*"]
+    },
     "types": [
       "vitest/globals",
       "vitest/importMeta"
     ],
-    "paths": {
-      "@unshared/*": ["./packages/*"],
-      "@/*": ["./scripts/*"]
-    }
+    "strict": true
   },
   "include": [
     "packages",
     "scripts",
     "examples",
-    "tsup.config.ts"
+    "tsup.config.ts",
+    "vitest.config.ts"
   ],
   "exclude": [
     "node_modules",
