--- a/package.json
+++ b/package.json
@@ -24,42 +24,42 @@
     "postinstall": "husky install"
   },
   "devDependencies": {
-    "@changesets/cli": "2.26.2",
-    "@commitlint/config-angular": "17.8.0",
-    "@commitlint/config-conventional": "17.8.0",
-    "@commitlint/config-pnpm-scopes": "17.7.0",
+    "@changesets/cli": "2.27.1",
+    "@commitlint/config-angular": "18.6.0",
+    "@commitlint/config-conventional": "18.6.0",
+    "@commitlint/config-pnpm-scopes": "18.4.4",
     "@rollup/plugin-terser": "0.4.4",
-    "@types/eslint": "8.44.2",
-    "@types/js-yaml": "4.0.6",
-    "@types/node": "20.6.3",
+    "@types/eslint": "8.56.2",
+    "@types/js-yaml": "4.0.9",
+    "@types/node": "20.11.8",
     "@unshared/eslint-config": "workspace:*",
     "@unshared/fs": "workspace:*",
     "@unshared/functions": "workspace:*",
     "@unshared/unplugin": "workspace:*",
-    "@vitest/coverage-v8": "0.34.6",
-    "@vitest/ui": "0.34.5",
-    "@vitest/utils": "0.34.5",
-    "axios": "1.5.0",
-    "commitlint": "17.8.0",
-    "dotenv": "16.3.1",
-    "eslint": "8.49.0",
-    "happy-dom": "12.1.5",
-    "husky": "8.0.3",
+    "@vitest/coverage-v8": "1.2.2",
+    "@vitest/ui": "1.2.2",
+    "@vitest/utils": "1.2.2",
+    "axios": "1.6.7",
+    "commitlint": "18.6.0",
+    "dotenv": "16.4.1",
+    "eslint": "8.56.0",
+    "happy-dom": "13.3.1",
+    "husky": "9.0.6",
     "js-yaml": "4.1.0",
-    "memfs": "4.3.0",
-    "rollup": "4.0.2",
+    "memfs": "4.6.0",
+    "openai": "4.26.0",
+    "rollup": "4.9.6",
     "rollup-plugin-dts": "6.1.0",
-    "rollup-plugin-esbuild": "6.1.0",
-    "tsx": "3.12.10",
+    "rollup-plugin-esbuild": "6.1.1",
+    "tsx": "4.7.0",
     "types-pkg-json": "1.2.1",
     "types-tsconfig": "2.0.2",
-    "typescript": "5.2.2",
-    "vitest": "0.34.5"
+    "typescript": "5.3.3",
+    "vitest": "1.2.2"
   },
   "eslintConfig": {
     "extends": [
-      "@unshared/eslint-config/basic",
-      "@unshared/eslint-config/typescript"
+      "@unshared/eslint-config"
     ]
   },
   "commitlint": {
@@ -67,7 +67,11 @@
       "@commitlint/config-pnpm-scopes"
     ],
     "rules": {
-      "body-max-length": [2, "always", "Infinity"]
+      "body-max-length": [
+        2,
+        "always",
+        "Infinity"
+      ]
     }
   }
 }
