chore: correct terminology in commit prompt configuration
Corrected the terminology from 'scopes' to 'types' in the commitPrompt.yaml to align with the conventional commit message standards. This change ensures clarity and consistency in the documentation of commit message guidelines.

--- a/scripts/commitPrompt.yaml
+++ b/scripts/commitPrompt.yaml
@@ -8,7 +8,7 @@ messages:
         <BLANK LINE>
         <body>
 
-      Allowed scopes:
+      Allowed types:
         chore:   Changes that don't affect the meaning of the code (white-space, formatting, missing semi-colons, etc)
         docs:    Documentation only changes
         feat:    A new feature
