chore: update .gitignore to exclude copied LICENSE files
Excluded LICENSE.md files that are copied into package directories during build from version control by updating the .gitignore. Additionally, restored the dist/ directory to the ignore list to prevent compiled code from being tracked. This ensures that generated files do not clutter the repository and maintains a clean project structure.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 node_modules/
-dist/
 docs/api
 docs/**/metadata.json
 *.log
@@ -11,3 +10,7 @@ docs/**/metadata.json
 # Vitest
 coverage/
 tsconfig.vitest-temp.json
+
+# Dist
+packages/*/LICENSE.md
+dist/
