chore: add publish script and update package configuration
Added a new script 'publish.ts' for handling package publishing with CI. Updated 'package.json' to include the new `publish:ci` script command. The script includes functionality for setting package versions based on git tags, handling release candidate versions, and determining publish access and tags. Modified 'constants.ts' to provide package names as constants for build and publish processes. This automation is intended to streamline the release process and ensure consistency in package publishing.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:coverage": "vitest --coverage",
     "commit": "tsx ./scripts/commit.ts",
     "commit:lint": "commitlint --edit",
+    "publish:ci": "tsx ./scripts/publish.ts",
     "preinstall": "node ./scripts/forcePnpm.js",
     "postinstall": "husky install"
   },
