chore: update dependency name in `fs` package
Corrected the dependency name from `@unshared/reactivity` to `@unshared/reactive` in the `fs` package's `package.json`. This change ensures that the `fs` package references the correct workspace dependency, maintaining consistency and preventing potential issues due to a misnamed dependency.

--- a/packages/fs/package.json
+++ b/packages/fs/package.json
@@ -108,7 +108,7 @@
   },
   "dependencies": {
     "@unshared/functions": "workspace:*",
-    "@unshared/reactivity": "workspace:*",
+    "@unshared/reactive": "workspace:*",
     "@unshared/string": "workspace:*"
   }
 }
