feat: rename `test` script to `test:ci` for CI consistency
Renamed the npm script `test` to `test:ci` and updated the corresponding GitHub Actions workflow to reflect this change. This ensures a clear distinction between local test watching and continuous integration testing commands. The `vitest --watch` mode is now the default behavior for the `test` script to better suit local development practices.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       # Run tests and lint
       - run: pnpm install
       # - run: pnpm lint # Disabled until linting issues are resolved
-      - run: pnpm test
+      - run: pnpm test:ci
 
       # Publish to NPM
       - name: Publish development version to NPM
