--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "build": "tsx ./scripts/build.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "vitest --run",
+    "test": "vitest --watch",
+    "test:ci": "vitest --run",
     "test:ui": "vitest --ui",
-    "test:watch": "vitest --watch",
     "test:types": "vitest typecheck",
     "test:coverage": "vitest --coverage",
     "commit": "tsx ./scripts/commit.ts",
