chore(types): remove build hash from package version
The version field in the package.json of the `types` package previously included a build hash. This commit removes that build hash to align with standard semantic versioning practices.

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@unshared/types",
   "type": "module",
-  "version": "0.0.1+05625bc",
+  "version": "0.0.1",
   "license": "MIT",
   "sideEffects": false,
   "author": "Stanley Horwood <stanley@hsjm.io>",
